# consciousness-core

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-cascade.yml
crates/wasm-bridge/: Cargo.toml
crates/wasm-bridge/src/: lib.rs
docs/: adr-0001-consolidation.md  dependency-map.md  nats-contract.yaml
src/: bridge.rs  iit.rs  kuramoto.rs  lib.rs  math_ext.rs  metrics.rs  wave.rs
tests/: serde_feature.rs  unified_pipeline.rs
