[package]
name = "consciousness-core"
version = "0.2.0"
edition = "2021"
description = "Unified consciousness physics: Kuramoto sync, IIT Φ, wave memory, and the Ξ operator"
license = "MIT"
keywords = ["consciousness", "kuramoto", "iit", "wave-memory"]

[features]
default = ["std"]
std = []
# Optional serde support for ConsciousnessLevel / PhiReport / etc. Downstream
# crates (kannaka-memory) enable this to serialize consciousness types into
# HRM snapshots without duplicating the enum definitions.
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], default-features = false, optional = true }

[dev-dependencies]
serde_json = "1"

# Integration tests in tests/ — see CHANGELOG 0.2.0 for coverage discipline.
# Run with `cargo test` (default features) or `cargo test --features serde`
# to also cover the serde feature flag.
